tests/compile-fail/generated/derives-span-Hash-tuple-struct.stderr
error[E0277]: the trait bound `Error: std::hash::Hash` is not satisfied
  --> $DIR/derives-span-Hash-tuple-struct.rs:15:5
   |
15 |     Error
   |     ^^^^^ the trait `std::hash::Hash` is not implemented for `Error`
   |
   = note: required by `std::hash::Hash::hash`
